force-app/src/objects/c2g__CombinationRuleSettings__c.object
<CustomObject>
    <description>Stores the combination rule setup definitions.</description>
    <fields>
        <fullName>c2g__ApexJobId__c</fullName>
        <description>Unique identifier for the current batch Apex job.</description>
        <label>Apex Job ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the batch process that produced the error.</description>
        <label>Batch Process</label>
        <referenceTo>c2g__fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>Combination Rule Setup</relationshipLabel>
        <relationshipName>CombinationRuleSetup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Companies__c</fullName>
        <label>Companies</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension1Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dimension 1 Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension2Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dimension 2 Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension3Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dimension 3 Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__EffectiveDateFrom__c</fullName>
        <label>Effective Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__EffectiveDateTo__c</fullName>
        <label>Effective Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__GLAs__c</fullName>
        <label>GLAs</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                    <default>true</default>
                    <label>Inactive</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                    <isActive>false</isActive>
                    <label>Activated</label>
                </value>
                <value>
                    <fullName>Draft</fullName>
                    <isActive>false</isActive>
                    <label>Draft</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Combination Rule Setup</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__EffectiveDateFrom__c</columns>
        <columns>c2g__EffectiveDateTo__c</columns>
        <columns>c2g__Status__c</columns>
        <columns>c2g__Dimension1Required__c</columns>
        <columns>c2g__Dimension2Required__c</columns>
        <columns>c2g__Dimension3Required__c</columns>
        <columns>c2g__Dimension4Required__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Combination Rule Setup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Combination Rules Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>